Created html for car and displayed in top left corner #1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="background">
   <div class="container">
-
+    <img id="f1-car-model" src="images/f1.svg" alt="f1-car">
   </div>
   <script src="main.js"></script>
 </body>
